<resources>
    <string name="app_name">Cook App</string>
    <string name="splash_desc">Initial Splash logo description</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="button_save">Save</string>
    <string name="button_Edit">Edit</string>
    <string name="button_add">Add</string>
    <string name="button_shopping">Shopping List</string>
    <string name="button_make_plan">Make Plan</string>
    <string name="hint_description">Description</string>
    <string name="hint_ingredients">Ingredients</string>
    <string name="hint_preparation">Preparation</string>
    <string name="image_recipe">Recipe Image</string>
    <string name="favorite_check">Make Favorite</string>

    <string name="menu_recipes">Recipes</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_shoppinglist">Shopping List</string>
    <string name="menu_newrecipe">Add New Recipe</string>
    <string name="menu_makeplan">Make a Plan</string>

    <string name="empty_not_saved" translatable="false">Word not saved because it is empty.</string>
    <string name="deleteButton" translatable="false">Delete All</string>
    <string name="button_update">Update</string>

</resources>
