<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipe"
    android:orientation="vertical">

    <LinearLayout
        tools:context=".AddRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_recipe_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:gravity="top"
            app:titleTextColor="@color/text_light"
            app:subtitleTextColor="@color/text_light"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".AddRecipe">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Recipe Name:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:paddingLeft="5dp"
                tools:ignore="Autofill,username" />

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image_recipe"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logo96" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Ingredients:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_style"
                android:padding="5dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Directions:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/preparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_style"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/ingredients"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:onClick="onSaved"
                android:text="@string/button_save" />

            <CheckBox
                android:id="@+id/favoriteCheckBox"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginBottom="8dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/favorite_check" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>